--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,9 +7,12 @@ form {
 .login {
   max-width: 60%;
   align-self: center;
+  left: 20%;
+  position: absolute;
 }
 input[type='text'],
-input[type='password'] {
+input[type='password'],
+input[type='email'] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -25,6 +28,10 @@ button {
   margin: 8px 0;
   border: none;
   cursor: pointer;
+  width: 100%;
+}
+button:disabled {
+  background-color: #a9bdaa;
   width: 100%;
 }
 
