skeleton for resource-list

--- a/src/app/modules/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/component/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div>
   <h2>Welcome {{ email }}</h2>
-
+  <nav>
+    <a routerLink="/resource-list">Resources</a>
+  </nav>
   <div class="container">
     <button (click)="logout()">
       Logout
