--- a/src/app/modules/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/component/dashboard/dashboard.component.html
@@ -3,6 +3,9 @@
   <nav>
     <a routerLink="/resource-list">Resources</a>
   </nav>
+  <nav>
+    <a routerLink="/projects">projects</a>
+  </nav>
   <div class="container">
     <button (click)="logout()">
       Logout
