resource add done

--- a/src/app/modules/Resources/containers/resource-list/resource-list.component.html
+++ b/src/app/modules/Resources/containers/resource-list/resource-list.component.html
@@ -1,1 +1,8 @@
 <app-resourcelist [resources]="data$ | async"></app-resourcelist>
+<div class="fixed-bottom">
+  <button class="btn-fab" [routerLink]="['/resource-add']">
+    <!-- <i class="fa fa-plus" aria-hidden="true"></i> -->
+
+    <img class="plus-button " src="assets/images/ic_add_white_18dp_1x.png" />
+  </button>
+</div>
