--- a/src/app/modules/Resources/components/resource-list/resource-list.component.html
+++ b/src/app/modules/Resources/components/resource-list/resource-list.component.html
@@ -16,5 +16,19 @@
     <td>{{ resource?.gitlab }}</td>
     <td>{{ resource?.name }}</td>
     <td>{{ resource?.upwork }}</td>
+    <div class="btn-group">
+      <button
+        class="btn btn-sm btn-edit btn-white mr-0 editbtn-margin"
+        [routerLink]="['/resource/']"
+      >
+        Edit
+      </button>
+      <button
+        class="btn btn-sm btn-edit btn-white mr-0 editbtn-margin"
+        (click)="clickDelete(resource)"
+      >
+        Delete
+      </button>
+    </div>
   </tr>
 </table>
