--- a/src/app/modules/Resources/containers/resource-add/resource-add.component.html
+++ b/src/app/modules/Resources/containers/resource-add/resource-add.component.html
@@ -1,1 +1,42 @@
-<p>Resource add container component works</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" formControlName="name" class="form-control" />
+
+          <label>Email</label>
+          <input type="text" formControlName="email" class="form-control" />
+
+          <label>Experience</label>
+          <input formControlName="experience" class="form-control" />
+
+          <label>Upwork</label>
+          <input type="text" formControlName="upwork" class="form-control" />
+
+          <label>Github</label>
+          <input formControlName="github" class="form-control" />
+
+          <label>Gitlab</label>
+          <input formControlName="gitlab" class="form-control" />
+
+          <label>Bitbucket</label>
+          <input formControlName="bitbucket" class="form-control" />
+
+          <button class="btn btn-primary" style="margin-top: 10px;">
+            Save
+          </button>
+          <button
+            (click)="cancel()"
+            class="btn btn-primary"
+            style="    margin-left: 19px;
+          margin-top: 10px;"
+          >
+            Cancel
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
