--- a/src/app/modules/project/container/project-add/project-add.component.html
+++ b/src/app/modules/project/container/project-add/project-add.component.html
@@ -1,1 +1,5 @@
-<app-project-add (formValue)="onSubmitProject($event)"></app-project-add>
+<app-project-add
+  (formValue)="onSubmitProject($event)"
+  [isEdit]="isEdit"
+  [project]="project1"
+></app-project-add>
