--- a/src/app/modules/project/component/list-project/list-project.component.html
+++ b/src/app/modules/project/component/list-project/list-project.component.html
@@ -26,6 +26,13 @@
       >
         Delete
       </button>
+      <button
+        class="btn btn-sm btn-edit btn-white mr-0 editbtn-margin"
+        [routerLink]="['/projects/detail/' + project?.projectId]"
+        style="background-color:blue"
+      >
+        View more
+      </button>
     </div>
   </tr>
 </table>
