--- a/src/app/modules/project/container/project-detail/project-detail.component.html
+++ b/src/app/modules/project/container/project-detail/project-detail.component.html
@@ -52,6 +52,13 @@
 >
   Back
 </button>
+<button
+  class="btn btn-primary"
+  style="float: left;margin-left: 10px"
+  (click)="upload()"
+>
+  Upload
+</button>
 
 <!-- modal documents -->
 <div class="modal fade" id="modal" role="dialog">
