--- a/src/app/modules/project/container/file-upload/file-upload.component.html
+++ b/src/app/modules/project/container/file-upload/file-upload.component.html
@@ -1,41 +1,60 @@
-<div
-  class="dropzone"
-  dropZone
-  (hovered)="toggleHover($event)"
-  (dropped)="startUpload($event)"
-  [class.hovering]="isHovering"
->
-  <h3>AngularFire Drop Zone</h3>
-  <p>Drag and Drop a File</p>
-  <div class="file">
-    <label class="file-label">
-      <input
-        class="file-input"
-        type="file"
-        (change)="startUpload($event.target.files)"
-      />
+<div class="modal-header">
+  <h4 class="modal-title pull-left">{{ title }}</h4>
+  <button
+    type="button"
+    class="close pull-right"
+    aria-label="Close"
+    (click)="bsModalRef.hide()"
+  >
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <div
+    class="dropzone"
+    dropZone
+    (hovered)="toggleHover($event)"
+    (dropped)="startUpload($event)"
+    [class.hovering]="isHovering"
+  >
+    <h3>AngularFire Drop Zone</h3>
+    <p>Drag and Drop a File</p>
+    <div class="file">
+      <label class="file-label">
+        <input
+          class="file-input"
+          type="file"
+          (change)="startUpload($event.target.files)"
+        />
 
-      <span class="file-cta">
-        <span class="file-icon">
-          <i class="fa fa-upload"></i>
+        <span class="file-cta">
+          <span class="file-icon">
+            <i class="fa fa-upload"></i>
+          </span>
         </span>
-      </span>
-    </label>
+      </label>
+    </div>
   </div>
+
+  <div *ngIf="(percentage | async) as pct">
+    <progress class="progress is-info" [value]="pct" max="100"> </progress>
+
+    {{ pct | number }}%
+  </div>
+
+  <div *ngIf="(downloadURL | async) as url">
+    <h3>Results!</h3>
+    <img [src]="url" /><br />
+    <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+  </div>
+  <hr />
 </div>
 
-<div *ngIf="(percentage | async) as pct">
-  <progress class="progress is-info" [value]="pct" max="100"> </progress>
-
-  {{ pct | number }}%
+<div class="modal-footer">
+  <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">
+    {{ closeBtnName }}
+  </button>
 </div>
-
-<div *ngIf="(downloadURL | async) as url">
-  <h3>Results!</h3>
-  <img [src]="url" /><br />
-  <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
-</div>
-<hr />
 
 <!-- <button (click)="task.pause()" class="button is-warning">
   Pause
