--- a/src/app/modules/project/container/project-detail/project-detail.component.html
+++ b/src/app/modules/project/container/project-detail/project-detail.component.html
@@ -44,18 +44,23 @@
     <td>{{ resource.hours }}</td>
 
     <td>
-      {{ resource.allocation[0].start | date }}
+      {{ resource.allocationStart | date }}
     </td>
     <td>
-      {{ resource.allocation[0].end | date }}
+      {{ resource.allocationEnd | date }}
     </td>
-
-    <button class="btn btn-danger" value="">Remove</button>
+    <button class="btn btn-info" value="">
+      Edit
+    </button>
+    <button class="btn btn-danger" value="">
+      Remove
+    </button>
   </tr>
-  <button class="btn btn-primary" data-toggle="modal" data-target="#resources">
-    Allocate new Recources
-  </button>
 </table>
+
+<button class="btn btn-primary" data-toggle="modal" data-target="#resources">
+  Allocate new Recources
+</button>
 
 <button
   class="btn btn-primary"
@@ -63,13 +68,6 @@
   (click)="goBack()"
 >
   Back
-</button>
-<button
-  class="btn btn-primary"
-  style="float: left;margin-left: 10px"
-  (click)="upload()"
->
-  Upload
 </button>
 
 <!-- modal documents -->
@@ -111,7 +109,7 @@
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label for="resource">Cost Per Hour:</label>
+          <label for="resource">Select Resource:</label>
           <select class="form-control">
             <option *ngFor="let resource of projectResourceList">
               {{ resource.name }}
