--- a/src/app/modules/project/container/file-upload/file-upload.component.html
+++ b/src/app/modules/project/container/file-upload/file-upload.component.html
@@ -17,7 +17,6 @@
     (dropped)="startUpload($event)"
     [class.hovering]="isHovering"
   >
-    <h3>AngularFire Drop Zone</h3>
     <p>Drag and Drop a File</p>
     <div class="file">
       <label class="file-label">
@@ -35,6 +34,12 @@
       </label>
     </div>
   </div>
+  <input
+    type="text"
+    class="form-control mb-1"
+    placeholder="Type here"
+    (input)="namechanged($event.target.value)"
+  />
 
   <div *ngIf="(percentage | async) as pct">
     <progress class="progress is-info" [value]="pct" max="100"> </progress>
@@ -51,6 +56,7 @@
 </div>
 
 <div class="modal-footer">
+  <button (click)="save()">Save</button>
   <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">
     {{ closeBtnName }}
   </button>
