added doc to required db TD delete a doc

--- a/src/app/modules/project/container/project-detail/project-detail.component.scss
+++ b/src/app/modules/project/container/project-detail/project-detail.component.scss
@@ -7,9 +7,17 @@ td {
 hr {
   border-width: 5px;
 }
+h5,
 h3,
 h4 {
   text-align: center;
+}
+.table-border {
+  table,
+  th,
+  td {
+    border: 1px solid black;
+  }
 }
 .label-location {
   background-color: #eeeeee;
