--- a/src/app/modules/project/container/project-detail/project-detail.component.html
+++ b/src/app/modules/project/container/project-detail/project-detail.component.html
@@ -4,7 +4,6 @@
     <th>ProjectName</th>
     <th>ClientName</th>
     <th>Country</th>
-    <th>Documents</th>
     <th>email</th>
     <th>skypeId</th>
     <th>startDate</th>
@@ -13,17 +12,9 @@
     <td>{{ projectdata?.projectName }}</td>
     <td>{{ projectdata?.clientName }}</td>
     <td>{{ projectdata?.country }}</td>
-    <td>
-      <label class="label-location" data-toggle="modal" data-target="#modal"
-        >View documents</label
-      >
-    </td>
     <td>{{ projectdata?.email }}</td>
     <td>{{ projectdata?.skypeId }}</td>
     <td>{{ projectdata?.startDate | date }}</td>
-    <button class="btn btn-primary" (click)="uploadDoc(projectdata.projectId)">
-      Upload New Document
-    </button>
   </tr>
 </table>
 
@@ -69,40 +60,35 @@
 <button class="btn btn-primary" data-toggle="modal" data-target="#resources">
   Allocate new Recources
 </button>
-
-<button
-  class="btn btn-primary"
-  style="float: right;margin-right: 10px"
-  (click)="goBack()"
->
-  Back
-</button>
-
-<!-- modal documents -->
-<div class="modal fade" id="modal" role="dialog">
-  <div class="modal-dialog modal-md modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Documents</h4>
-        <button type="button" class="close" data-dismiss="modal">
-          &times;
-        </button>
-      </div>
-      <div class="modal-body">
-        <div
-          class="chip"
-          *ngFor="let chip of projectdata?.documents; let i = index"
-        >
-          <p>{{ chip?.name }},{{ chip?.url }}</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-white " data-dismiss="modal">
-          Close
-        </button>
-      </div>
-    </div>
-  </div>
+<hr />
+<h5>Documents</h5>
+<div class="table-border">
+  <table>
+    <tr>
+      <th>No</th>
+      <th>Name</th>
+      <th>link</th>
+    </tr>
+    <tr *ngFor="let doc of projectDocuments; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ doc.name }}</td>
+      <td>
+        <a href="{{ doc.url }}" target="_blank" style="color: green;">link</a>
+      </td>
+    </tr>
+  </table>
+</div>
+<div style="margin-top:10px">
+  <button class="btn btn-primary" (click)="uploadDoc(projectdata.projectId)">
+    Upload New Document
+  </button>
+  <button
+    class="btn btn-primary"
+    style="float: right;margin-right: 10px"
+    (click)="goBack()"
+  >
+    Back
+  </button>
 </div>
 
 <!-- modal Allocate Resources -->
