--- a/src/app/modules/Resources/components/resource-list/resource-list.component.css
+++ b/src/app/modules/Resources/components/resource-list/resource-list.component.css
@@ -14,21 +14,21 @@ th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
-.btn-group button {
-  background-color: #4caf50; /* Green background */
-  border: 1px solid green; /* Green border */
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  width: 50%; /* Set a width if needed */
-  display: block; /* Make the buttons appear below each other */
+/* .btn-group button {
+  background-color: #4caf50; 
+  border: 1px solid green;
+  color: white; 
+  padding: 10px 24px;
+  cursor: pointer; 
+  width: 50%;
+  display: block; 
 }
 
 .btn-group button:not(:last-child) {
-  border-bottom: none; /* Prevent double borders */
+  border-bottom: none; 
 }
 
-/* Add a background color on hover */
+
 .btn-group button:hover {
   background-color: #3e8e41;
-}
+} */
