--- a/src/app/modules/project/component/list-project/list-project.component.html
+++ b/src/app/modules/project/component/list-project/list-project.component.html
@@ -5,6 +5,7 @@
     <th>Country</th>
     <th>Skype</th>
     <th>Email</th>
+    <th>Status</th>
     <th>Start Date</th>
   </tr>
   <tr *ngFor="let project of projects">
@@ -13,22 +14,23 @@
     <td>{{ project?.country }}</td>
     <td>{{ project?.skypeId }}</td>
     <td>{{ project?.email }}</td>
+    <td>{{ status[(project?.status)] }}</td>
     <td>{{ project?.startDate | date }}</td>
 
     <div class="btn-group">
       <button
-        class="btn btn-sm btn-edit btn-white mr-0 editbtn-margin"
+        class="btn btn-success"
         [routerLink]="['/projects/edit', project.projectId]"
       >
         Edit
       </button>
 
       <button
-        class="btn btn-sm btn-edit btn-white mr-0 editbtn-margin"
+        class="btn btn-primary"
         [routerLink]="['/projects/detail/' + project?.projectId]"
         style="background-color:blue"
       >
-        View more
+        Details
       </button>
     </div>
   </tr>
