deleted file from bucket

--- a/src/app/modules/project/container/project-detail/project-detail.component.html
+++ b/src/app/modules/project/container/project-detail/project-detail.component.html
@@ -82,7 +82,7 @@
         <a href="{{ doc.url }}" target="_blank" style="color: green;">link</a>
       </td>
       <td>
-        <button class="btn btn-danger" (click)="deleteLink(doc.url)">
+        <button class="btn btn-danger" (click)="deleteLink(doc)">
           Delete
         </button>
       </td>
