--- a/src/app/modules/project/component/project-add/project-add.component.html
+++ b/src/app/modules/project/component/project-add/project-add.component.html
@@ -1,3 +1,6 @@
+<h3>
+  <span *ngIf="isEdit">Edit</span><span *ngIf="!isEdit">Add</span> Project
+</h3>
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
