--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div id="container">
-  <app-sidebar></app-sidebar>
+  <app-sidebar *ngIf="isLoggedIn"></app-sidebar>
 
   <div id="content">
     <router-outlet></router-outlet>
