--- a/src/app/modules/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/component/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Welcome {{ email }}</h2>
+  <!-- <h2>Welcome {{ email }}</h2> -->
   <nav>
     <a routerLink="/resource-list">Resources</a>
   </nav>
