--- a/src/app/modules/Resources/components/resource-add/resource-add.component.html
+++ b/src/app/modules/Resources/components/resource-add/resource-add.component.html
@@ -6,25 +6,56 @@
         <div class="form-group">
           <label>Name</label>
           <input type="text" formControlName="name" class="form-control" />
-
+          <span class="text-danger" *ngIf="submitFlag && f.name.errors"
+            >*required feild
+          </span>
+        </div>
+        <div class="form-group">
           <label>Email</label>
           <input type="text" formControlName="email" class="form-control" />
-
+          <span class="text-danger" *ngIf="submitFlag && f.email.errors"
+            >*Invalid Email
+          </span>
+        </div>
+        <div class="form-group">
           <label>Experience</label>
-          <input formControlName="experience" class="form-control" />
-
+          <input
+            type="number"
+            formControlName="experience"
+            class="form-control"
+          />
+          <span class="text-danger" *ngIf="submitFlag && f.experience.errors"
+            >*required feild
+          </span>
+        </div>
+        <div class="form-group">
           <label>Upwork</label>
           <input type="text" formControlName="upwork" class="form-control" />
-
+        </div>
+        <div class="form-group">
           <label>Github</label>
           <input formControlName="github" class="form-control" />
+          <span class="text-danger" *ngIf="submitFlag && f.github.errors"
+            >*required feild
+          </span>
+        </div>
 
+        <div class="form-group">
           <label>Gitlab</label>
           <input formControlName="gitlab" class="form-control" />
+          <span class="text-danger" *ngIf="submitFlag && f.gitlab.errors"
+            >*required feild
+          </span>
+        </div>
 
+        <div class="form-group">
           <label>Bitbucket</label>
           <input formControlName="bitbucket" class="form-control" />
-
+          <span class="text-danger" *ngIf="submitFlag && f.bitbucket.errors"
+            >*required feild
+          </span>
+        </div>
+        <div class="form-group">
           <button class="btn btn-primary" style="margin-top: 10px;">
             {{ this.navButton }}
           </button>
