--- a/src/app/modules/project/container/project-detail/project-detail.component.html
+++ b/src/app/modules/project/container/project-detail/project-detail.component.html
@@ -72,12 +72,14 @@
     <tr>
       <th>No</th>
       <th>Name</th>
+      <th>Valid Upto</th>
       <th>link</th>
       <th>Action</th>
     </tr>
     <tr *ngFor="let doc of projectDocuments; let i = index">
       <td>{{ i + 1 }}</td>
       <td>{{ doc.name }}</td>
+      <td>{{ doc.date | date }}</td>
       <td>
         <a
           href="{{ doc.url }}"
