--- a/src/app/modules/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="resource-list">
+      <a routerLink="resources">
         <i class="material-icons">people</i>
       </a>
     </li>
