removed dead code

--- a/src/app/modules/project/container/project-add/project-add.component.html
+++ b/src/app/modules/project/container/project-add/project-add.component.html
@@ -1,5 +1,5 @@
-<app-project-add
+<app-project-form
   (formValue)="onSubmitProject($event)"
   [isEdit]="isEdit"
   [project]="project1"
-></app-project-add>
+></app-project-form>
