--- a/src/app/modules/project/container/list-project/list-project.component.html
+++ b/src/app/modules/project/container/list-project/list-project.component.html
@@ -1,4 +1,45 @@
-<app-list-project [projects]="data$ | async"></app-list-project>
+<h3>Project List</h3>
+<table>
+  <tr>
+    <th>Sl. No</th>
+    <th>Project Name</th>
+    <th>client</th>
+    <th>Country</th>
+    <th>Skype</th>
+    <th>Email</th>
+    <th>Status</th>
+    <th>Start Date</th>
+    <th>Actions</th>
+  </tr>
+  <tr *ngFor="let project of (projects$ | async); let i = index">
+    <td>{{ i + 1 }}</td>
+    <td>{{ project?.projectName }}</td>
+    <td>{{ project?.clientName }}</td>
+    <td>{{ project?.country }}</td>
+    <td>{{ project?.skypeId }}</td>
+    <td>{{ project?.email }}</td>
+    <td>{{ status[(project?.status)] }}</td>
+    <td>{{ project?.startDate | date }}</td>
+
+    <div class="btn-group btn-block">
+      <button
+        class="btn btn-success"
+        [routerLink]="['/projects/edit', project.projectId]"
+      >
+        Edit
+      </button>
+
+      <button
+        class="btn btn-primary"
+        [routerLink]="['/projects/detail/' + project?.projectId]"
+        style="background-color:blue"
+      >
+        Details
+      </button>
+    </div>
+  </tr>
+</table>
+
 <div class="fixed-bottom">
   <button class="btn-fab" [routerLink]="['/projects/add']">
     <!-- <i class="fa fa-plus" aria-hidden="true"></i> -->
