user module basic structure

--- a/src/app/modules/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/sidebar/sidebar.component.html
@@ -7,12 +7,17 @@
     </li>
     <li>
       <a routerLink="resources">
-        <i class="material-icons">people</i>
+        <i class="material-icons">list</i>
+      </a>
+    </li>
+    <li>
+      <a routerLink="users">
+        <i class="material-icons">supervisor_account</i>
       </a>
     </li>
     <li>
       <a routerLink="" (click)="logout()">
-        <i class="material-icons">person_pin</i>
+        <i class="material-icons">person</i>
       </a>
     </li>
   </ul>
